# spec2plan

./: .gitignore  PROJECT.md  README.md  program.md  pyproject.toml  results.tsv
examples/: blog_system.py  cli_tool.py  web_dashboard.py
spec2plan/: __init__.py  cli.py
spec2plan/core/: __init__.py  analyzer.py  architect.py  generator.py  planner.py
spec2plan/templates/: __init__.py  plan.md.j2  plan_md_j2.py
tests/: __init__.py  test_advanced_features.py  test_analyzer.py  test_architect.py  test_cli.py  test_cli_extended.py  test_edge_cases.py  test_generator.py  test_generator_extended.py  test_generator_rendering.py  test_integration.py  test_new_features.py  test_output_quality.py  test_planner.py
