[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec2plan"
version = "0.1.0"
description = "Transform natural language requirements into structured implementation plans"
authors = [{name = "Spec2Plan Team"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
spec2plan = "spec2plan.cli:main"

dependencies = [
    "click>=8.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "click>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
